feat: Security e Login adicionados